--- a/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/DVGroove-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/DVGroove-0.1.0.yaml
@@ -11,13 +11,13 @@ examples:
     - A simple DV-Groove
     - |
       !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/DVGroove-0.1.0>
-        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 19, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        alpha_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 40, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
-        alpha_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
-        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        h1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 7, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        h2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 7, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 19, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        alpha_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 40, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        alpha_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        h1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 7, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        h2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 7, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
         code_number: ['2.4', 2.5.1, 2.5.2]
 
 type: object
