--- a/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/UVGroove-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/UVGroove-0.1.0.yaml
@@ -11,12 +11,12 @@ examples:
     - A simple UV-Groove
     - |
       !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/UVGroove-0.1.0>
-        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 12, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
-        beta: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 11, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
-        R: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 6, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
-        h: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 12, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        beta: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 11, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        R: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 6, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        h: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
         code_number: ['1.6']
 
 type: object
