--- a/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-0.1.0.yaml
@@ -25,7 +25,7 @@ example:
             signal_type: analog
             unit: V
           error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-            deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
+            deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
         graph: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-0.1.0>
           root_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-0.1.0>
             name: Current sensor
@@ -38,7 +38,7 @@ example:
                 transformation: !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.0>
                   name: AD conversion
                   error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-                    deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.025, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
+                    deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.025, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
                   func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
                     expression: a*x
                     parameters:
@@ -57,12 +57,12 @@ example:
                     transformation: !<asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-0.1.0>
                       name: Calibration
                       error: !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-                        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
+                        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
                       func: !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
                         expression: a*x + b
                         parameters:
-                          a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 75, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere}
-                          b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 25, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> ampere}
+                          a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 75, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> A}
+                          b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 25, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> A}
                       type_transformation: DD
                   target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-0.1.0>
                     name: Calibration
