update GH action

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,5 +16,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Grep for PR number in CHANGELOG.md
-        run: grep -P '\[[^\]]*#${{github.event.number}}[,\]]' CHANGELOG.md
+      - name: Grep for PR number in CHANGELOG.rst
+        run: grep -P '\[[^\]]*#${{github.event.number}}[,\]]' CHANGELOG.rst
