--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
 name = weldx
-author = Cagtay Fabry
-author-email = Cagtay.Fabry@bam.de
-home-page = https://www.bam.de/weldx
+author = "Cagtay Fabry <cagtay.fabry@bam.de>, Volker Hirthammer <volker.hirthammer@bam.de>, Martin K. Scherer <martin.scherer@bam.de>"
+author_email = "cagtay.fabry@bam.de"
+home_page = https://www.bam.de/weldx
 description = Python API for the WelDX file format and standard
-long-description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 license = BSD License
-license-file = LICENSE
+license_file = LICENSE
 platform = any
 keywords =
     welding
@@ -28,7 +28,7 @@ project_urls =
     Documentation = https://weldx.readthedocs.io
     Source Code = https://github.com/BAMweldx/weldx
     Bug Tracker = https://github.com/BAMweldx/weldx/issues
-    Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md
+    Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.rst
 
 [options]
 packages = find:
