--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ ci:
   autoupdate_schedule: weekly
   skip: []
   submodules: false
+exclude: '.*.weldx|.*.wx|.*.asdf'
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
