also add .zenodo.json and validate in action

--- a/.github/workflows/citation.yml
+++ b/.github/workflows/citation.yml
@@ -25,3 +25,5 @@ jobs:
         run: pip install cffconvert
       - name: run cffconvert validate
         run: cffconvert --validate
+      - name: compare .zenodo.json contents
+        uses: citation-file-format/cffconvert-github-action@main
