update wx_shape validator optional syntax (#571)
* update validator and test

* fix string handling for expected lists

* update syntax in LCS schema

* update docs

* update CHANGELOG.rst

* fix formatting

* fix chars

* Update local_coordinate_system-0.1.0.yaml

--- a/weldx/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-0.1.0.yaml
@@ -112,11 +112,9 @@ properties:
     description: |
       An ndarray containing the orientations.
     tag: "asdf://weldx.bam.de/weldx/tags/core/variable-0.1.*"
-
 wx_shape:
-  (coordinates): [..., 3]
-  (orientations): [(t), 3, 3]
-
+  coordinates: [..., 3]
+  orientations: [(t), 3, 3]
 propertyOrder: [reference_time, time, orientations, coordinates]
 flowStyle: block
 ...
