--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -3,15 +3,26 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.9
   - setuptools_scm
   - pip
-  # Notebook + Plotting
+  # jupyterlab setup
   - jupyterlab=3
-  - ipykernel
-  - matplotlib
   - ipympl
-  - nodejs
+  # weldx
+  - numpy
+  - pandas
+  - xarray
+  - scipy
+  - sympy
+  - pint
+  - asdf
+  - bottleneck
+  - boltons
+  - networkx
+  - fs
+  - ipywidgets
+  - ipykernel
   - k3d=2.11
-#  - pip:
-#    - git+https://github.com/BAMWelDX/weldx.git
+  - meshio
+  - psutil
