install jupyterlab during test phase
circumvent fail of pip check, as k3d currently requests jupyterlab as a runtime dependency.

xref: https://github.com/K3D-tools/K3D-jupyter/issues/312

--- a/devtools/conda.recipe/meta.yaml
+++ b/devtools/conda.recipe/meta.yaml
@@ -31,6 +31,8 @@ test:
   requires:
     - pytest
     - pytest-xdist
+    # Remove once this is fixed: https://github.com/K3D-tools/K3D-jupyter/issues/312
+    - jupyterlab
   files:
     - conftest.py
   imports:
