--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_type-0.1.0.yaml
@@ -17,10 +17,10 @@ examples:
         gas_component:
         - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
           gas_chemical_name: argon
-          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 82, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> '%'}
+          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 82, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> percent}
         - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
           gas_chemical_name: carbon dioxide
-          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 18, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> '%'}
+          gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 18, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> percent}
         common_name: SG
 
 properties:
