--- a/weldx/schemas/weldx.bam.de/weldx/core/time_series-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/time_series-0.1.0.yaml
@@ -13,7 +13,7 @@ examples:
     - A time_series describing a constant value in time.
     - |
       !<asdf://weldx.bam.de/weldx/tags/core/time_series-0.1.0>
-        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm / s
+        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter / second
         value: 10.0
   -
     - A time_series describing a sine oscillation in 3d space along the z-axis
@@ -23,16 +23,16 @@ examples:
           expression: a*sin(o*t + p) + b
           parameters:
             a: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0>
-              units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm
+              units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter
               value: !core/ndarray-1.0.0
                 data:
                 - [0, 0, 1]
                 datatype: int32
                 shape: [1, 3]
-            b: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 0.0, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm}
-            o: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4.934802200544679, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> Hz * rad}
+            b: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 0.0, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter}
+            o: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4.934802200544679, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> hertz * radian}
             p: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 0, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> radian}
-        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm
+        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter
         shape: [1, 3]
 
 oneOf:
