--- a/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/IGroove-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/IGroove-0.1.0.yaml
@@ -11,8 +11,8 @@ examples:
     - A simple I-Groove
     - |
       !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/IGroove-0.1.0>
-        t: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm}
-        b: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> mm}
+        t: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter}
+        b: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 4, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> millimeter}
         code_number: [1.2.1, 1.2.2, '2.1']
 
 type: object
