--- a/weldx/schemas/weldx.bam.de/weldx/measurement/signal-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/signal-0.1.0.yaml
@@ -13,13 +13,13 @@ examples:
     - |
       !<asdf://weldx.bam.de/weldx/tags/measurement/signal-0.1.0>
         signal_type: analog
-        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> V
+        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> volt
   -
     - A digital dimensionless signal.
     - |
       !<asdf://weldx.bam.de/weldx/tags/measurement/signal-0.1.0>
         signal_type: digital
-        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> ''
+        units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> dimensionless
 
 properties:
   signal_type:
