--- a/weldx/schemas/weldx.bam.de/weldx/units/quantity-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/units/quantity-0.1.0.yaml
@@ -15,13 +15,13 @@ examples:
     - |
         !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0>
           value: 3.14159
-          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> km
+          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> kilometer
   -
     - A quantity with an array of values
     - |
         !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0>
           value: !core/ndarray-1.0.0 [1, 2, 3, 4]
-          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> A
+          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> ampere
   -
     - A quantity with an n-dimensional array of values
     - |
@@ -30,7 +30,7 @@ examples:
             datatype: float64
             data: [[1, 2, 3],
                    [4, 5, 6]]
-          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> m / s
+          units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> meter / second
 
 
 type: object
