--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_for_procedure-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_for_procedure-0.1.0.yaml
@@ -18,12 +18,12 @@ examples:
             gas_component:
             - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
               gas_chemical_name: argon
-              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 82, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
+              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 82, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> percent}
             - !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
               gas_chemical_name: carbon dioxide
-              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 18, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
+              gas_percentage: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 18, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> percent}
             common_name: SG
-          torch_shielding_gas_flowrate: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 20, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> l / min}
+          torch_shielding_gas_flowrate: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 20, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> l / min}
 
 type: object
 properties:
@@ -40,7 +40,7 @@ properties:
   torch_shielding_gas_flowrate:
     description: |
       Flow rate of shielding gas required or specified.
-    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 
   use_backing_gas:
     description: |
@@ -55,7 +55,7 @@ properties:
   backing_gas_flowrate:
     description: |
       Flowrate of backing gas.
-    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 
   use_trailing_gas:
     description: |
@@ -70,7 +70,7 @@ properties:
   trailing_shielding_gas_flowrate:
     description: |
       Flowrate of trailing gas during welding.
-    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 
 
 
