--- a/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/mathematical_expression-0.1.0.yaml
@@ -18,8 +18,8 @@ examples:
       !<asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-0.1.0>
         expression: a*x + b
         parameters:
-          a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1.2, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> V}
-          b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3.4, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> V}
+          a: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 1.2, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> volt}
+          b: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 3.4, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> volt}
 
 type: object
 properties:
@@ -32,7 +32,7 @@ properties:
     description: |
       List of constant parameters that to be set in the mathematical expression.
     type: object
-    wx_property_tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
+    wx_property_tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 
 required: [expression]
 propertyOrder: [expression, parameters]
