--- a/weldx/schemas/weldx.bam.de/weldx/measurement/error-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/error-0.1.0.yaml
@@ -13,7 +13,7 @@ examples:
     - An error representing a deviation of 0.1%.
     - |
       !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> '%'}
+        deviation: !<asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.0> {value: 0.1, units: !<asdf://weldx.bam.de/weldx/tags/units/units-0.1.0> percent}
 
 type: object
 properties:
@@ -22,7 +22,7 @@ properties:
       A simple numerical representation of the error.
     oneOf:
       - type: number
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
+      - tag: "asdf://weldx.bam.de/weldx/tags/units/quantity-0.1.*"
 required: [deviation]
 flowStyle: block
 ...
